--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/login_style.css'%}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body class="img js-fullheight " style="background-image: url(/static/img/login_bg.jpg);">
+<body class="img js-fullheight" >
     
     <section class="ftco-section">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mt-5 pt-5">
 
             </div>
             <div class="row justify-content-center">
@@ -24,31 +24,22 @@
                         <h3 class="mb-4 text-center">Have an account?</h3>
                         <form action="{% url 'accounts:login'%}" class="signin-form" method="post">
                             {%csrf_token%}
-                            <div class="form-group">
-                                <input type="text" name="username" class="form-control" placeholder="Username or Email" required>
+                            <div class="form-group mt-3">
+                                <input type="text" name="username" class="form-control" placeholder="Username " required>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group mt-3">
                                 <input id="password-field" name="password" type="password" class="form-control" placeholder="Password"
                                     required>
-                                <span toggle="#password-field"
-                                    class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group mt-3">
                                 <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
                             </div>
-                            <div class="form-group d-md-flex">
-                                <div class="w-50">
-                                    <label class="checkbox-wrap checkbox-primary">Remember Me
-                                        <input type="checkbox" checked>
-                                        <span class="checkmark"></span>
-                                    </label>
-                                </div>
 
-                            </div>
                         </form>
-                        <div class="social d-flex text-center">
-                            <a href="{% url 'accounts:register'%}" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span>
-                                Sign Up</a>
+                        <p class="w-100 text-center my-0 pt-3">&mdash; Create account  &mdash;</p>
+                        <div class="social d-flex text-center justify-content-center">
+                            <a href="{% url 'accounts:register'%}" class="py-2 mr-md-1 rounded w-100"><button type="submit" class="form-control btn btn-secondary submit px-3">Sign Up<span class="ion-logo-facebook mr-2"></span></button></a>
+                                </a></button>
                         </div>
                     </div>
                 </div>
@@ -56,16 +47,14 @@
         </div>
     </section>
 
-    <script src="{% static 'js/login/jquery.min.js' %}"></script>
-    <script src="{% static 'js/login/popper.js' %}"></script>
-    <script src="{% static 'js/login/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/login/main.js' %}"></script>
+
     <script defer
         src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317"
         integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA=="
         data-cf-beacon='{"rayId":"85b7262a1aa94333","b":1,"version":"2024.2.1","token":"cd0b4b3a733644fc843ef0b185f98241"}'
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 
