--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -4,22 +4,22 @@
 <html lang="en">
 
 <head>
-    <title>Login </title>
+    <title>Sign Up </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/login_style.css'%}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body class="img js-fullheight" style="background-image: url(/static/img/signup_bg.jpg);">
+<body class="img js-fullheight " >
     <section class="ftco-section">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center pt-5">
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 col-lg-4">
-                    <div class="login-wrap p-0">
+                    <div class="login-wrap pt-5">
                         <h3 class="mb-4 text-center">Create New Account!</h3>
                         <form action="{% url 'accounts:register'%}" class="signup-form" method="post">
                             {%csrf_token%}
@@ -31,49 +31,43 @@
                                 <input type="text" name="last_name" class="form-control" placeholder="Last name" required>
                             </div>
                             </div>
-                            <div class="form-group ">
+                            <div class="form-group pt-3 ">
                                 <input type="text" name="username" class="form-control" placeholder="Username" required>
                             </div>
-                            <div class="form-group ">
+                            <div class="form-group pt-3 ">
                                 <input  name="email" type="email" class="form-control" placeholder="Email" required>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group pt-3">
                                 <input id="password-field" name="password1" type="password" class="form-control" placeholder="Password"
                                     required>
-                                <span toggle="#password-field"
-                                    class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
                             <div class="form-group">
                                 <input id="password-field2" name="password2" type="password" class="form-control" placeholder="Confirm Password"
                                     required>
-                                <span toggle="#password-field2"
-                                    class="fa fa-fw fa-eye field-icon toggle-password"></span>
                             </div>
-                            <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary submit px-3">Sign Up</button>
+                            <div class="form-group pt-3">
+                                <button type="submit" class="form-control btn btn-primary submit ">Sign Up</button>
                             </div>
                         </form>
-                        <p class="w-100 text-center">&mdash; Have an account?  &mdash;</p>
-                        <div class="social d-flex text-center">
-                            <a href="{% url 'accounts:login'%}" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span>
-                                Login</a>
-                        </div>
+                        <p class="w-100 text-center pt-3">&mdash; Have an account?  &mdash;</p>
+                        <div class="social d-flex text-center justify-content-center">
+                            <a href="{% url 'accounts:login'%}" class=" mr-md-1 rounded w-100"><button type="submit" class="form-control btn btn-secondary submit ">Log In<span class="ion-logo-facebook mr-2"></span></button></a>
+                                </a></button>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="{% static 'js/login/jquery.min.js' %}"></script>
-    <script src="{% static 'js/login/popper.js' %}"></script>
-    <script src="{% static 'js/login/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/login/main.js' %}"></script>
+
     <script defer
         src="https://static.cloudflareinsights.com/beacon.min.js/v84a3a4012de94ce1a686ba8c167c359c1696973893317"
         integrity="sha512-euoFGowhlaLqXsPWQ48qSkBSCFs3DPRyiwVu3FjR96cMPx+Fr+gpWRhIafcHwqwCqWS42RZhIudOvEI+Ckf6MA=="
         data-cf-beacon='{"rayId":"85b7262a1aa94333","b":1,"version":"2024.2.1","token":"cd0b4b3a733644fc843ef0b185f98241"}'
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 
