fixed some bogs

--- a/core/templates/todo/task_confirm_delete.html
+++ b/core/templates/todo/task_confirm_delete.html
@@ -8,7 +8,7 @@
 		<p>Are you sure that you want to delete <strong>"{{task}}"</strong>?</p>
 		<p class="form-buttons">
 			<input type="submit" class="btn btn-danger" value="Delete">
-			<a href="{% url 'task_list'%}" class="btn btn-outline">Cancel</a>
+			<a href="{% url 'todo:task_list'%}" class="btn btn-outline">Cancel</a>
 		</p>
 	</form>
 </div>
