--- a/core/templates/todo/task_list.html
+++ b/core/templates/todo/task_list.html
@@ -20,7 +20,7 @@
           {% csrf_token %}
           <div class="input-group mb-3">
             <input type="text" class="form-control rounded-4" name="title" placeholder="Enter task title"
-              aria-label="Recipient's username" aria-describedby="button-addon2">
+              aria-label="Recipient's username" aria-describedby="button-addon2" required>
             <button class="btn btn-primary" type="submit">Add</button>
           </div>
 
