--- a/core/templates/todo/task_list.html
+++ b/core/templates/todo/task_list.html
@@ -5,9 +5,13 @@
 {% block extra_css %}{% endblock %}
 
 {% block content %}
+
 <div class="modal modal-signin position-static d-block  py-5" tabindex="-1" role="dialog" id="modalSignin">
+  <p class="w-100 text-center my-0 pt-3">The {{cityname}} temp = {{citytemp}} </p>
+
   <div class="modal-dialog" role="document">
     <div class="modal-content rounded-5 shadow">
+
       <div class="modal-header p-5 pb-4 border-bottom-0">
         <!-- <h5 class="modal-title">Modal title</h5> -->
         <h2 class="fw-bold mb-0">Todo App </h2>
